--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div name="welcome">
-            <h1>Добро пожаловать!</h1>
+            <h1 name="header">Добро пожаловать!</h1>
             <p>
                 Вот и ты здесь оказался с нами, дорогой наш человек! Рады, очень
                 рады! Мы являемся Курортом, зоной отдыха, рекреации, позитива,
@@ -54,7 +54,7 @@
             </p>
         </div>
 
-        <div>
+        <div name="aboutUs">
             <h2>
                 Наша Здравница названа в честь священной цифры для нашего
                 спонсора - Семь, фигуры Круга, означающего у нас Бесконечность
@@ -64,7 +64,7 @@
                 которого все любят!
             </h2>
         </div>
-        <div>
+        <div name="znaki">
             <img src="pic/7.png" alt="seven" name="faces" />
             <img src="pic/round.png" alt="round" name="faces" />
             <img src="pic/ada.png" alt="Ада" name="faces" />
@@ -82,7 +82,7 @@
             </blockquote>
         </div>
 
-        <div name="about">
+        <div name="aboutService">
             <p>
                 Невозможно отказаться от наших услуг! Это не потому что они
                 такие замечательные, а просто - нельзя. Вашего друга ждёт
@@ -90,7 +90,7 @@
             </p>
         </div>
 
-        <div name="table">
+        <div name="tableService">
             <table>
                 <th></th>
                 <th>
@@ -99,7 +99,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img src="pic/transfer.png" alt="transfer" />
+                            <img src="pic/transfer.png" alt="transfer"/>
                         </td>
                         <td>
                             Первое с чем всегда встречается наш гость -
@@ -297,13 +297,13 @@
         </div>
 
         <div name="feedback">
-            <table>
+            <table name="tableFeedback">
                 <th></th>
                 <th>
                     <h3>Отзовы Благодарных Душ</h3>
                 </th>
                 <tr>
-                    <td><img src="pic/feedback4.png" alt="" /></td>
+                    <td><img src="pic/feedback4.png" alt="cat" /></td>
                     <td>
                         После посещения Контактного Зоопарка в Аду я понял как
                         на самом деле сильно люблю своего Котика, хоть он и
@@ -314,7 +314,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><img src="pic/feedback3.png" alt="" /></td>
+                    <td><img src="pic/feedback3.png" alt="husband" /></td>
                     <td>
                         Вечность прошла незаметно, возможно оттого что я так не
                         хотел возвращаться на землю, где за мной постоянно
@@ -327,7 +327,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><img src="pic/feedback5.png" alt="" /></td>
+                    <td><img src="pic/feedback5.png" alt="lion" /></td>
                     <td>
                         До путешествия в Ад люди постоянно говорили мне что я -
                         лев, и чтобы я уходил! Меня это очень напрягало и жизнь
@@ -342,7 +342,7 @@
                 </tr>
             </table>
         </div>
-        <div name="welcomemans">
+        <div name="welcomeMans">
             <img src="pic/welcome.png" alt="priva" />
         </div>
         <div name="kollektiv">
