--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <body>
         <div name="welcome">
             <h1 name="header">Добро пожаловать!</h1>
-            <p>
+            <p name="vot">
                 Вот и ты здесь оказался с нами, дорогой наш человек! Рады, очень
                 рады! Мы являемся Курортом, зоной отдыха, рекреации, позитива,
                 территорией любви к жизни! А не то, что писали в большой скучной
                 чёрной книжке с крестом на обложке.
             </p>
 
-            <p>
+            <p name="mission">
                 Наша Миссия - вернуть вашим близким радость обычной жизни:
                 работы, рутины, капризов детей, политических шоу, вечной
                 нехватки денег и уверенности в завтрашнем дне, а главное -
                 общения с вами!
             </p>
 
-            <p>
+            <p name="badFriend">
                 Если для вас очевидно что ваш ближний скуксился, приуныл,
                 слишком много ест с горя, готовит коктейли Вени Ерофеева и
                 жалуется на серую унылую жизнь или напротив - лютует, наглеет,
@@ -32,19 +32,19 @@
                 пришли по верному адресу!
             </p>
 
-            <p>
+            <p name="weBest">
                 Мы - дружная команда специалистов чувственных практик, играючи,
                 ровно за 7 дней вернём клиенту Радость жизни!
             </p>
 
-            <p>
+            <p name="time">
                 Благодаря запатентованной технологии замедления времени с
                 помощью Клубничного Варенья в Песочных Часах, ваша обычная
                 земная неделя для клиента в нашем уютном мирке будет тянуться от
                 1000 до 1 000 000 лет (судя по отзывам клиентов).
             </p>
 
-            <p>
+            <p name="petrovich">
                 Если вы у нас окажетесь вновь, после того как старина Святой
                 Пётр, спрячет ключ поглубже в тунику и махнёт рукой куда-то вниз
                 при встрече с вами, у вас будет возможность пройти обучающий
@@ -257,8 +257,8 @@
             Нам нужны данные об очередной жер..Госте! Мы хотим знать всё! Дай,
             дай нам информацию, Человече!
 
-            <form action="index.html" name="anketa">
-                <p>
+            <form action="index.html" >
+                <p name="anketa">
                     <b> Имя его </b>
                     <input type="text" name="hisname" /><br />
                     <b> Лет на земле </b>
@@ -357,8 +357,8 @@
         <div name="tv">
             <img src="pic/tv1.png" alt="" />
         </div>
-        <div name="video">
-            <iframe
+        <div name="vset">
+            <iframe name="video"
                 width="350"
                 height="280"
                 src="https://www.youtube.com/embed/f6ISSflY4EE"
