--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="ru">
     <head>
         <h1>Семь Кругов Ада</h1>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8" 
+		name="viewport" 
+		content="initial-scale=1, maximum-scale=1"/>
         <link rel="stylesheet" href="hellstyle.css" />
         <title>Viva la vita!</title>
     </head>
-    <body>
+    <body class="container">
         <div name="welcome">
             <h1 name="header">Добро пожаловать!</h1>
             <p name="vot">
