--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                         <td>
                             Первое с чем всегда встречается наш гость -
                             легендарная служба Трансфера в Ад! Начинается всё с
-                            появления развесёлого летучего отряда, которой шутя
+                            появления развесёлого летучего отряда, которой, шутя
                             и балагуря, увлекает за собой вашего дорогого
-                            знакомого и доставляет его прямохонь к Свинцовому
+                            знакомого и доставляет его прямяком ко Свинцовому
                             Ковчегу. Затем его ожидает затяжной морской круиз
                             через Море Забвения и прибытие на Первый круг нашего
                             курорта - неподрожаемое Серое Уныние!
