--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="ru">
     <head>
         <h1>Семь Кругов Ада</h1>
-        <meta charset="UTF-8" 
-		name="viewport" 
-		content="initial-scale=1, maximum-scale=1"/>
+        <meta
+            charset="UTF-8"
+            name="viewport"
+            content="initial-scale=1, maximum-scale=1" />
         <link rel="stylesheet" href="hellstyle.css" />
         <title>Viva la vita!</title>
     </head>
@@ -67,10 +68,22 @@
             </h2>
         </div>
         <div name="znaki">
-            <img src="pic/7.png" alt="seven" name="faces" />
-            <img src="pic/round.png" alt="round" name="faces" />
-            <img src="pic/ada.png" alt="Ада" name="faces" />
-            <img src="pic/popugay.png" alt="popugay" name="faces" />
+            <a href="https://www.kinopoisk.ru/film/377/" target="_blank">
+                <img src="pic/7.png" alt="seven" name="faces" />
+            </a>
+            <a
+                href="https://www.kakprosto.ru/kak-241203-kak-nachertit-pentagrammu"
+                target="_blank">
+                <img src="pic/round.png" alt="round" name="faces" />
+            </a>
+            <a href="https://dzen.ru/a/YfPIryX3KhV9_SCf" target="_blank">
+                <img src="pic/ada.png" alt="Ада" name="faces"
+            /></a>
+            <a
+                href="https://nerazluchnik.com/parrots/melopsittacus-undulatus"
+                target="_blank"
+                ><img src="pic/popugay.png" alt="popugay" name="faces"
+            /></a>
         </div>
 
         <div name="boss">
@@ -101,7 +114,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img src="pic/transfer.png" alt="transfer"/>
+                            <img src="pic/transfer.png" alt="transfer" />
                         </td>
                         <td>
                             Первое с чем всегда встречается наш гость -
@@ -259,7 +272,7 @@
             Нам нужны данные об очередной жер..Госте! Мы хотим знать всё! Дай,
             дай нам информацию, Человече!
 
-            <form action="index.html" >
+            <form action="index.html">
                 <p name="anketa">
                     <b> Имя его </b>
                     <input type="text" name="hisname" /><br />
@@ -360,7 +373,8 @@
             <img src="pic/tv1.png" alt="" />
         </div>
         <div name="vset">
-            <iframe name="video"
+            <iframe
+                name="video"
                 width="350"
                 height="280"
                 src="https://www.youtube.com/embed/f6ISSflY4EE"
